# jada

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  benchmark.hpp  benchmark_jada.cpp  reference_kernels.hpp
catch/: CMakeLists.txt  catch_main.cpp  catch_mpi_main.cpp
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
examples/: CMakeLists.txt
examples/dirichlet/: CMakeLists.txt  common.hpp  dirichlet.cpp  dirichlet_nvexec.cpp  dirichlet_stdpar.cpp  grid.hpp
include/: jada.hpp
include/bits/: algorithms.hpp  boundary_subspan.hpp  cartesian_product.hpp  cartesian_product_impl.hpp  check_mpi.hpp  counting_iterator.hpp  data.hpp  decomposition.hpp  divide_equally.hpp  evaluate_boundary.hpp  evaluate_tiled.hpp  extents.hpp  for_each_boundary_index.hpp  for_each_index.hpp  index_conversions.hpp  index_handle.hpp  indices.hpp  integer_types.hpp  loop.hpp  mdspan.hpp  min_max_offset.hpp  neighbours.hpp  rank.hpp  subspan.hpp  tiled_stencil.hpp  utils.hpp
include/bits/algorithms/: algorithms.hpp  for_each.hpp  generic_foreach.hpp  md_for_each.hpp  tile_transform.hpp  transform.hpp  window_transform.hpp
include/bits/communication/: all_reduce.hpp  block.hpp  box.hpp  box_rank_pair.hpp  channel.hpp  communication.hpp  data_exchange.hpp  decomposition.hpp  distributed_array.hpp  divide_equally.hpp  gather.hpp  mpi_channel.hpp  mpi_functions.hpp  neighbours.hpp  topology.hpp  transfer_info.hpp
include/bits/core/: cartesian_product_impl.hpp  core.hpp  counting_iterator.hpp  extents.hpp  indices.hpp  loop.hpp  mdspan.hpp  mdspan_impl.hpp  rank.hpp  subspan.hpp  tuple_extensions.hpp  utils.hpp
include/bits/geometry/: box.hpp  decomposition.hpp  geometry.hpp  neighbours.hpp  topology.hpp
include/bits/stencil/: grid.hpp
include/bits/tl_ranges/: cartesian_product_impl.hpp  tuple_utils.hpp
include/bits/unused/: boundary_subspan.hpp  neighbours.hpp  split_to_subspans.hpp
single_header/: single_jada.hpp  test.cpp
test/: CMakeLists.txt  benchmark_jada.cpp  test.hpp  test_algorithms.cpp  test_communication.cpp  test_core.cpp  test_geometry.cpp  test_jada.cpp  test_unused.cpp
