
add_executable(DirichletSolverStdpar.bin dirichlet_stdpar.cpp)
target_link_libraries(DirichletSolverStdpar.bin PRIVATE project_options project_warnings)
target_include_directories(DirichletSolverStdpar.bin PUBLIC ${CMAKE_SOURCE_DIR})

add_executable(DirichletSolverNvexec.bin dirichlet_nvexec.cpp)
target_link_libraries(DirichletSolverNvexec.bin PRIVATE project_options project_warnings)
target_include_directories(DirichletSolverNvexec.bin PUBLIC ${CMAKE_SOURCE_DIR})